@@ -2712,15 +2712,19 @@ scripts_iuser=Initial login
 scripts_ipass=$1 with password $2
 scripts_uok=Un-Install Script
 scripts_upok=Upgrade To Version:
+scripts_upok2=Upgrade To Un-supported Version:
 scripts_udesc=This page can be used to un-install a script, or upgrade it to the latest version. If you un-install, any data files and databases associated with it will be lost.
 scripts_uninstalling=Now un-installing $1 version $2 ..
 scripts_uptitle=Upgrade Script
 scripts_intitle=Install Script
 scripts_eavail=This script is not available
+scripts_eversion=Missing or invalid-looking version number
+scripts_eversion2=The specified version is not available
 scripts_apache=Configuring Apache PHP settings ..
 scripts_aalready=.. already done.
 scripts_tabexisting=Installed Scripts
 scripts_tabnew=Available Scripts
+scripts_tabunsup=Install Un-supported Version
 scripts_name=Script
 scripts_ver=Version
 scripts_path=Install path
@@ -2772,6 +2776,10 @@ scripts_passmode2=Password $1
 scripts_passmodedef3=Same username as domain
 scripts_passmode3=Username $1
 scripts_epassmodeuser=Invalid login for script - only letters, numbers and the characters . - _ may be used
+scripts_unsupheader=Un-supported script install options
+scripts_unsupname=Script to install
+scripts_unsupver=Version number
+scripts_unsupdesc=This form allows you to install a script version that has not been tested by Virtualmin, or is no longer supported. Be aware that this may not work, and could even break other pages in the virtual server.
 
 newnotify_title=Email Server Owners
 newnotify_desc=This page can be used to send email to the owners of the selected virtual servers, for example to announce system down-time, upgrades or other service alterations. The following substitions can be used in the message body and subject:
