@@ -807,3 +807,4 @@ When using Postfix with the sender_bcc_maps directive, a new option on the Modul
 Removed the modify-aliascopy.pl command-line program, as it's features have been included in modify-mail.pl.
 Fixed a bug that prevented mail for users with @ in their names and mbox-format mail files from being properly displayed on systems using Postfix.
 When an alias domain is created, the primary domain can now update its configuration as needed. This allows AWstats to work when accessed via the alias domain.
+Un-supported script versions can now be installed by the master admin .. but use this feature at your own risk!
